# tyrian-monorepo

./: .gitignore  FINAL_MIGRATION_COMPLETE.md  FINAL_SUMMARY.md  FRAMEWORK_PRESET.md  GITHUB_WORKFLOWS_SETUP.md  INFRASTRUCTURE_COMPLETE.md  INTEGRATE_UI.sh  NX_MIGRATION_REPORT.md  ORGANIZE_DOCS.sh  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  POC_COMPLETE.md  README.md  RELEASE_NOTES_v1.0.0.md  START_ALL_SERVICES.sh  START_AUTH_SERVICE.sh  STOP_ALL_SERVICES.sh  TEST_ALL_APPS.sh  TEST_OAUTH.md  add-workflows.sh  docker-compose.dev.yml  docker-compose.yml  jest.preset.js  nx.json  package-lock.json  package.json  quick-check.sh  test-cors.html  test-login.html  test-oauth.html  test-simple.html  tsconfig.base.json
ai-assistant/: next.config.ts  project.json  tailwind.config.ts  (+1 more)
ai-assistant-e2e/: playwright.config.ts  project.json
apps/backends/stocks-backend/web-clients/cmc/: .env.example  Dockerfile  README.md  coin_market_cap_api.py  config.py  docker-compose.yml  enums.py  exceptions.py  main.py  models.py  pyproject.toml  repository.py  services.py
apps/backends/stocks-backend/web-clients/terrapin/: .env.example  Dockerfile  pyproject.toml
apps/backends/stocks-backend/web-clients/terrapin/app/: main.py  settings.py
apps/backends/stocks-backend/web-clients/terrapin/app/api_client/: __init__.py  base.py  terrapin.py
apps/backends/stocks-backend/web-clients/terrapin/app/models/: bonds.py  params.py
apps/backends/stocks-backend/web-clients/terrapin/app/redis/: metric_request.py
apps/backends/stocks-backend/web-clients/terrapin/app/routes/: bonds.py
(+2608 files in other folders)
