[tool.poetry]
name = "coin-market-cap"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.7"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"
redis = "^5.2.1"
uvicorn = "^0.34.0"
gunicorn = "20.1.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
